oec/static/css/oec.css
/* ... */
                    @media all and (max-width: 768px) {
                      body.profile article .profile_header #title h1:after {
                        display: none;   }
}
            body.profile article .profile_header #title h1:hover:after {
              opacity: 0.9; }
  body.profile article .profile_header .author {
    -webkit-transition: opacity 0.5s;
    -moz-transition: opacity 0.5s;
    -ms-transition: opacity 0.5s;
    -o-transition: opacity 0.5s;
    transition: opacity 0.5s;
    bottom: 3px;
    color: white;
    font-size: 9px;
    font-weight: 300;
    opacity: 0;
    position: absolute;
    right: 7px;
    text-shadow: 0 2px 2px rgba(0, 0, 0, 0.5); }
    body.profile article .profile_header .author i {
      display: inline-block;
      margin: 2px 5px 0; }
      body.profile article .profile_header .author a {
        color: white; }
        body.profile article .profile_header .author a:hover {
          border-color: transparent; }
  body.profile article .profile_header #stats {
    -webkit-justify-content: center;
    -moz-justify-content: center;
    justify-content: center;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: row;
    -moz-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: flex-start;
    align-items: flex-start;
    -webkit-justify-content: space-between;
    -moz-justify-content: space-between;
    justify-content: space-between;
    -webkit-flex-wrap: wrap;
    flex-wrap: wrap;
    position: relative; }
    body.profile article .profile_header #title,
    body.profile article .profile_header #stats {
      margin: 20px; }
      body.profile article .profile_header.country #title,
      body.profile article .profile_header.country #stats {
        margin-left: 290px; }
        @media all and (max-width: 768px) {
          body.profile article .profile_header.country #title,
          body.profile article .profile_header.country #stats {
            margin-left: 20px;   }
}
  body.profile article .profile_header:hover .author {
    opacity: 1; }
    body.profile article .profile_header:hover .coords {
      fill: white;
      opacity: 0.25;
      stroke: #212831; }
      body.profile article .profile_header:hover .coords.focus {
        opacity: 1; }
  body.profile article .profile_header .stat {
    -webkit-box-flex: 1;
    -moz-box-flex: 1;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    -webkit-justify-content: center;
    -moz-justify-content: center;
    justify-content: center;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: column;
    -moz-flex-direction: column;
    flex-direction: column;
    color: white;
    margin-right: 35px;
    margin-top: 20px; }
    body.profile article .profile_header .stat:last-child {
      margin-right: 0; }
      @media all and (max-width: 1024px) {
        body.profile article .profile_header .stat {
          margin: 10px;   }
}
        @media all and (max-width: 600px) {
          body.profile article .profile_header .stat {
            min-width: 40%;   }
}
          body.profile article .profile_header .stat .stat_text {
            -webkit-justify-content: center;
            -moz-justify-content: center;
            justify-content: center;
            display: -webkit-box;
            display: -moz-box;
            display: -ms-flexbox;
            display: -webkit-flex;
            display: flex;
            -webkit-flex-direction: row;
            -moz-flex-direction: row;
            flex-direction: row;
            -webkit-align-items: center;
            align-items: center;
            -webkit-justify-content: flex-start;
            -moz-justify-content: flex-start;
            justify-content: flex-start; }
            @media all and (max-width: 1024px) {
              body.profile article .profile_header .stat .stat_text {
                -webkit-flex-direction: column;
                -moz-flex-direction: column;
                flex-direction: column;
                -webkit-justify-content: center;
                -moz-justify-content: center;
                justify-content: center;
                text-align: center;   }
                body.profile article .profile_header .stat .stat_text h3 {
                  margin: 0 !important;   }
}
            @media all and (max-width: 600px) {
              body.profile article .profile_header .stat .stat_text {
                -webkit-flex-direction: row;
                -moz-flex-direction: row;
                flex-direction: row;
                -webkit-justify-content: flex-start;
                -moz-justify-content: flex-start;
                justify-content: flex-start;
                text-align: left;   }
                body.profile article .profile_header .stat .stat_text h3 {
                  margin: 0 10px 0 0 !important;   }
}
            body.profile article .profile_header .stat .stat_text h3 {
              font-family: "Source Sans Pro", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
              font-size: 32px;
              font-weight: 300; }
              body.profile article .profile_header .stat .stat_text sub {
                font-family: "Montserrat", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
                font-size: 14px;
                font-weight: 700;
                text-transform: uppercase; }
                body.profile article .profile_header .stat .stat_text sub .rank {
                  display: block;
                  font-size: 10px;
                  font-weight: 400;
                  white-space: nowrap; }
    body.profile article .profile_header .stat .sparkline {
      height: 35px;
      margin: 10px 0;
      width: 90%; }
/* ... */

